--- a/Amber/Amber.vcxproj.filters
+++ b/Amber/Amber.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="src\Amber\Core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Application.h">
+    <ClInclude Include="src\Amber\Application.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Amber\EntryPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Application.cpp">
+    <ClCompile Include="src\Amber\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
