--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Amber/vendor/spdlog"]
 	path = Amber/vendor/spdlog
 	url = https://github.com/gabime/spdlog  
+[submodule "Amber/vendor/GLFW"]
+	path = Amber/vendor/GLFW
+	url = https://github.com/glfw/glfw
