--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Amber/vendor/GLFW"]
 	path = Amber/vendor/GLFW
 	url = https://github.com/TheCherno/glfw.git
+[submodule "Amber/vendor/imgui"]
+	path = Amber/vendor/imgui
+	url = https://github.com/TheCherno/imgui
