--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,10 @@
 	url = https://github.com/gabime/spdlog
 [submodule "Amber/vendor/GLFW"]
 	path = Amber/vendor/GLFW
-	url = https://github.com/TheCherno/glfw.git
-[submodule "Amber/vendor/imgui"]
-	path = Amber/vendor/imgui
-	url = https://github.com/TheCherno/imgui
+	url = https://github.com/TheCherno/glfw.git 
 [submodule "Amber/vendor/glm"]
 	path = Amber/vendor/glm
 	url = https://github.com/g-truc/glm
+[submodule "imgui"]
+	path = imgui
+	url = https://github.com/TheCherno/imgui.git
