Vid 22 Done, Docking not working, Imgui maybe defect or not working with this version

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=365,0
-Size=550,701
+Pos=397,77
+Size=619,433
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=60,60
@@ -14,13 +15,19 @@ Size=339,324
 Collapsed=0
 
 [Window][Example: Console]
-Pos=60,60
+Pos=65,79
 Size=520,600
 Collapsed=0
 
 [Window][Example: Log]
-Pos=60,62
-Size=500,400
+Pos=595,38
+Size=328,603
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Example: Simple layout]
+Pos=24,50
+Size=500,440
 Collapsed=0
 
 [Table][0x861D378E,3]
@@ -100,4 +107,9 @@ Column 3  Width=112
 Column 4  Width=112
 Column 5  Width=112
 Column 6  Width=112
+
+[Docking][Data]
+DockNode    ID=0x00000001 Pos=630,339 Size=619,433 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=328,659 Selected=0xDBFE1153
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=289,659 Selected=0xE87781F4
 
