--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "Amber/vendor/glm"]
 	path = Amber/vendor/glm
 	url = https://github.com/g-truc/glm
-[submodule "imgui"]
-	path = imgui
+[submodule "Amber/vendor/imgui"]
+	path = Amber/vendor/imgui
 	url = https://github.com/TheCherno/imgui.git
