Pre renderer App

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=397,77
-Size=619,433
+Pos=921,19
+Size=359,559
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=60,60
@@ -15,19 +15,30 @@ Size=339,324
 Collapsed=0
 
 [Window][Example: Console]
-Pos=65,79
-Size=520,600
+Pos=377,580
+Size=903,206
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Example: Log]
-Pos=595,38
-Size=328,603
+Pos=0,19
+Size=375,767
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Example: Simple layout]
 Pos=24,50
 Size=500,440
+Collapsed=0
+
+[Window][Test]
+Pos=927,268
+Size=333,116
+Collapsed=1
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,786
 Collapsed=0
 
 [Table][0x861D378E,3]
@@ -109,7 +120,11 @@ Column 5  Width=112
 Column 6  Width=112
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=630,339 Size=619,433 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=328,659 Selected=0xDBFE1153
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=289,659 Selected=0xE87781F4
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=105,153 Size=1280,767 Split=X
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=375,701 Selected=0xDBFE1153
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=903,701 Split=Y
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=542,493 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=542,559 CentralNode=1
+      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=359,559 Selected=0xE87781F4
+    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=542,206 Selected=0xDE6E0C33
 
