--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=921,19
-Size=359,559
+Pos=908,3
+Size=358,691
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=60,60
@@ -15,14 +14,14 @@ Size=339,324
 Collapsed=0
 
 [Window][Example: Console]
-Pos=377,580
-Size=903,206
+Pos=377,712
+Size=1543,279
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Example: Log]
 Pos=0,19
-Size=375,767
+Size=375,972
 Collapsed=0
 DockId=0x00000002,0
 
@@ -32,13 +31,12 @@ Size=500,440
 Collapsed=0
 
 [Window][Test]
-Pos=927,268
-Size=333,116
-Collapsed=1
+Pos=85,28
+Size=375,118
+Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
-Size=1280,786
+Size=1280,720
 Collapsed=0
 
 [Table][0x861D378E,3]
@@ -120,11 +118,9 @@ Column 5  Width=112
 Column 6  Width=112
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=105,153 Size=1280,767 Split=X
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=375,701 Selected=0xDBFE1153
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=903,701 Split=Y
-    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=542,493 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=542,559 CentralNode=1
-      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=359,559 Selected=0xE87781F4
-    DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=542,206 Selected=0xDE6E0C33
+DockSpace     ID=0x3BC79352 Pos=199,265 Size=1280,701 Split=X
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=375,701 Selected=0xDBFE1153
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=903,701 Split=Y
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=542,691 CentralNode=1
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=542,279 Selected=0xDE6E0C33
 
