--- a/Amber/Amber.vcxproj
+++ b/Amber/Amber.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="src\Amber\Log.h" />
     <ClInclude Include="src\Amber\MouseButtonCodes.h" />
     <ClInclude Include="src\Amber\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Amber\Renderer\Shader.h" />
     <ClInclude Include="src\Amber\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
@@ -172,6 +173,7 @@
     <ClCompile Include="src\Amber\Layer.cpp" />
     <ClCompile Include="src\Amber\LayerStack.cpp" />
     <ClCompile Include="src\Amber\Log.cpp" />
+    <ClCompile Include="src\Amber\Renderer\Shader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
