--- a/Amber/Amber.vcxproj
+++ b/Amber/Amber.vcxproj
@@ -143,6 +143,9 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Amber\Renderer\RenderCommand.h" />
+    <ClInclude Include="src\Amber\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Amber\Renderer\Renderer.h" />
     <ClInclude Include="src\Amber.h" />
@@ -172,6 +175,9 @@
     <ClInclude Include="src\Amber\Renderer\VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Amber\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Amber\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Amber\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Amber\Application.cpp" />
