--- a/Amber/Amber.vcxproj.filters
+++ b/Amber/Amber.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClInclude Include="src\Amber\Renderer\Renderer.h" />
     <ClInclude Include="src\Amber\Renderer\VertexArray.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
+    <ClInclude Include="src\Amber\Renderer\RendererAPI.h" />
+    <ClInclude Include="src\Amber\Renderer\RenderCommand.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Amber\Application.cpp">
@@ -113,5 +116,8 @@
     <ClCompile Include="src\Amber\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Amber\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
+    <ClCompile Include="src\Amber\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\Amber\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
   </ItemGroup>
 </Project>
