--- a/Amber/Amber.vcxproj
+++ b/Amber/Amber.vcxproj
@@ -143,6 +143,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Amber\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Amber\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Amber\Renderer\RendererAPI.h" />
@@ -175,6 +176,7 @@
     <ClInclude Include="src\Amber\Renderer\VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Amber\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Amber\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Amber\Renderer\RendererAPI.cpp" />
