--- a/Amber/Amber.vcxproj.filters
+++ b/Amber/Amber.vcxproj.filters
@@ -82,6 +82,7 @@
     <ClInclude Include="src\Amber\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Amber\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Amber\Renderer\OrthographicCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Amber\Application.cpp">
@@ -119,5 +120,6 @@
     <ClCompile Include="src\Amber\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Amber\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Amber\Renderer\OrthographicCamera.cpp" />
   </ItemGroup>
 </Project>
