rendering updated, camera movement and rendered components movement done partly.

--- a/Amber/Amber.vcxproj
+++ b/Amber/Amber.vcxproj
@@ -143,6 +143,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Amber\Core\Timestep.h" />
     <ClInclude Include="src\Amber\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Amber\Renderer\RenderCommand.h" />
