--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -141,6 +141,10 @@
       <Project>{8CACD40C-F8C0-FCBD-C142-A01D2D16F9EE}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\Shaders\ColorfulShader.glsl" />
+    <None Include="assets\Shaders\FlatColorShader.glsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
