--- a/Amber/Amber.vcxproj
+++ b/Amber/Amber.vcxproj
@@ -143,6 +143,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Amber\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\Amber.h" />
     <ClInclude Include="src\Amber\Application.h" />
     <ClInclude Include="src\Amber\Core.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Amber\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Amber\Application.cpp" />
     <ClCompile Include="src\Amber\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Amber\ImGui\ImGuiLayer.cpp" />
