--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -142,8 +142,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="assets\Shaders\ColorfulShader.glsl" />
-    <None Include="assets\Shaders\FlatColorShader.glsl" />
+    <None Include="assets\Shaders\Colorful.glsl" />
+    <None Include="assets\Shaders\Flat.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
